fix grid collapse bug

--- a/input/assets/css/_my-account-personal-details.scss
+++ b/input/assets/css/_my-account-personal-details.scss
@@ -128,14 +128,6 @@
   }
 }
 
-// Helper classes
-.no-left-padding {
-  padding-left: 0;
-}
-.no-right-padding {
-  padding-right: 0;
-}
-
 // Personal details editable content
 .required-text {
   color: $dark-grey;
